Implement 'make install'

--- a/src/makefile
+++ b/src/makefile
@@ -8,3 +8,7 @@ INCLUDE_FLAGS :=
 
 $(TARGET) : $(SOURCE_FILES)
 	gcc $(SOURCE_FILES) -std=gnu99 -g $(INCLUDE_FLAGS) -lcanopy -lcurl -lwebsockets -lrt -o $@
+
+.PHONY: install
+install:
+	cp $(TARGET) /usr/local/bin
